@@ -95,6 +95,7 @@ interface
 - new method SCIPbranchVarHole() which branches a variable w.r.t. a given domain hole
 - default integer comparer SCIPsortCompInt() (see pub_misc.h)
 - data structure for binary search trees (SCIP_BST and SCIP_BSTNODE in pub_misc.h)
+- renamed SCIPstairmap*Core() to SCIPstairmap*Stair()
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
